--- a/about.html
+++ b/about.html
@@ -71,15 +71,14 @@ Faculty
           Filmmaker-in-chief for the Jonathan B. Murray Center for Documentary Journalism. He was named one of the 10 Filmmakers to Watch in 2014 by The Independent. Robert’s most recent film is the critically-acclaimed Kate plays Christine.
         </p>
 
-      </div> <!--Closing body container-->
-
-      <ul id="footer">
-            <li style="float:left"><a href="mailto:journalism@missouri.edu" title="Contact">Contact</a></li>
-            <li><a href="https://vimeo.com/home" target="_blank"><img src="./images/vimeo_icon.png" alt="Vimeo" width="35px"/></a></li>
-            <li><a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook_icon.png" alt="Facebook" width="35px"/></a></li>
-            <li><a href="https://twitter.com/" target="_blank"><img src="./images/twitter_icon.png" alt="Twitter" width="35px"/></a></li>
-            <li><a href="https://www.instagram.com/" target="_blank"><img src="./images/instagram_icon.png" alt="Instagram" width="35px"/></a></li>
-      </ul>
-      </div> <!--Closing entire container-->
-      </body>
-      </html>
+        <!--COPY FROM HERE DOWN TO GET TEMPLATE FOOTER-->
+        </div> <!--Closing body container-->
+        <ul id="footer">
+              <li style="float:left"><a href="mailto:woelfels@missouri.edu" title="Contact">Contact</a></li>
+              <li><a href="https://vimeo.com/home" target="_blank"><img src="./images/vimeo_icon.png" alt="Vimeo" width="35px"/></a></li>
+              <li><a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook_icon.png" alt="Facebook" width="35px"/></a></li>
+              <li><a href="https://twitter.com/" target="_blank"><img src="./images/twitter_icon.png" alt="Twitter" width="35px"/></a></li>
+        </ul>
+        </div> <!--Closing entire container-->
+        </body>
+        </html>
