working on flex flow
reagranged stuff

--- a/about.html
+++ b/about.html
@@ -42,13 +42,14 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
 <h2>
 Faculty
 </h2>
-<p style= "text-align: center">
-<img src= "./images/stacey.jpg" alt= "Stacey Woelfel" width="600px" />
-</p>
-    <h3 style="text-align: center">
+<div class="bio">
+
+      <h3 style="text-align: center">
       Stacey Woelfel
-    </h3>
-    <p>
+      </h3>
+    <p style= "text-align: center">
+      <img src= "./images/stacey.jpg" alt= "Stacey Woelfel" width="600px" />
+
        <a href="mailto: woelfels@missouri.edu">
          woelfels@missouri.edu
        </a>
@@ -56,13 +57,16 @@ Faculty
       <p>
         Director of the Jonathan B. Murray Center for Documentary Journalism at the school. He serves on the screening committee of the True/False Film Fest, is a jury member for the St. Louis International Film Festival and serves as a jury member and a member of the board of the Kansas City Film Festival.
       </p>
+</div>
 
-<p style= "text-align: center">
-<img src= "./images/robert.jpg" alt= "Robert Greene" width="600px" />
-</p>
-    <h3 style="text-align: center">
+<div class="bio2">
+
+    <p style= "text-align: center">
+        <img src= "./images/robert.jpg" alt= "Robert Greene" width="600px" />
+    </p>
+      <h3 style="text-align: center">
       Robert Greene
-    </h3>
+      </h3>
     <p>
         <a href="mailto: greenera@missouri.edu"> greenera@missouri.edu
         </a>
@@ -70,10 +74,10 @@ Faculty
         <p>
           Filmmaker-in-chief for the Jonathan B. Murray Center for Documentary Journalism. He was named one of the 10 Filmmakers to Watch in 2014 by The Independent. Robert’s most recent film is the critically-acclaimed Kate plays Christine.
         </p>
-
+</div>
         <!--COPY FROM HERE DOWN TO GET TEMPLATE FOOTER-->
         </div> <!--Closing body container-->
-        <ul id="footer">
+  <ul id="footer">
               <li style="float:left"><a href="mailto:woelfels@missouri.edu" title="Contact">Contact</a></li>
               <li><a href="https://vimeo.com/home" target="_blank"><img src="./images/vimeo_icon.png" alt="Vimeo" width="35px"/></a></li>
               <li><a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook_icon.png" alt="Facebook" width="35px"/></a></li>
