--- a/films.html
+++ b/films.html
@@ -22,7 +22,7 @@
 <ul id="nav1" class="navigation">
       <li id="nav2" class="first"><a href="index.html"><img src="./images/_method_mobile.png" alt="Logo" width="43px"/></a></li>
        <li><a href="index.html" title="Home">Home</a></li>
-       <li><a href="_films.html" title="Films">Films</a></li>
+       <li><a href="films.html" title="Films">Films</a></li>
        <li><a href="filmmakers.html" title="Filmmakers">Filmmakers</a></li>
        <li><a href="about.html" title="About">About</a></li>
        <li><a href="press.html" title="Press">Press</a></li>
