added padding to the text

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 About Method M Films
 </h1>
 <p style= "text-align: center">
-<img src= "./images/method_m_gold.png" alt=" Method M Films Logo" width="600px"  />
+<img src= "./images/method_about_page.png" alt=" Method M Films Logo" width="600px"  />
 </p>
 
 <p>
@@ -55,7 +55,7 @@ Faculty
          woelfels@missouri.edu
        </a>
     </p>
-      <p>
+      <p style= "padding: 10px">
         Director of the Jonathan B. Murray Center for Documentary Journalism at the school. He serves on the screening committee of the True/False Film Fest, is a jury member for the St. Louis International Film Festival and serves as a jury member and a member of the board of the Kansas City Film Festival.
       </p>
 </div>
@@ -71,7 +71,7 @@ Faculty
         <a href="mailto: greenera@missouri.edu"> greenera@missouri.edu
         </a>
     </p>
-        <p>
+        <p style= "padding: 10px">
           Filmmaker-in-chief for the Jonathan B. Murray Center for Documentary Journalism. He was named one of the 10 Filmmakers to Watch in 2014 by The Independent. Robert’s most recent film is the critically-acclaimed Kate plays Christine.
         </p>
 </div>
