--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
 <h2 >
 Faculty
 </h2>
-
+<div class="all">
       <h3 style="text-align: center">
       Stacey Woelfel
       </h3>
@@ -74,6 +74,7 @@ Faculty
         <p style= "padding: 10px">
           Filmmaker-in-chief for the Jonathan B. Murray Center for Documentary Journalism. He was named one of the 10 Filmmakers to Watch in 2014 by The Independent. Robert’s most recent film is the critically-acclaimed Kate plays Christine.
         </p>
+</div>
 </div>
         <!--COPY FROM HERE DOWN TO GET TEMPLATE FOOTER-->
         </div> <!--Closing body container-->
