--- a/filmmakers.html
+++ b/filmmakers.html
@@ -2,45 +2,85 @@
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
+<!-- 10/13 Copy for new Favicon and title text -->
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300|Raleway" rel="stylesheet">
+    <title>Filmakers Method M Films</title>
+    <meta http-equiv="content-type"
+		content="text/html;charset=utf-8"/>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300|Raleway" rel="stylesheet"/>
+
+    <link rel="icon"
+      type="image/png"
+      href="images/favicon.png"/>
 </head>
+<!-- End 10/13 copy -->
 
 <body>
   <div id="container">
-<ul id="nav1">
-      <li id="nav2"><a href="index.html"><img src="./images/method_m_gold.png" alt="Logo" width="500px"/></a></li>
+<ul id="nav1" class="navigation">
+      <li id="nav2" class="first"><a href="index.html"><img src="./images/_method_mobile.png" alt="Logo" width="42px"/></a></li>
        <li><a href="index.html" title="Home">Home</a></li>
        <li><a href="films.html" title="Films">Films</a></li>
        <li><a href="filmmakers.html" title="Filmmakers">Filmmakers</a></li>
        <li><a href="about.html" title="About">About</a></li>
        <li><a href="press.html" title="Press">Press</a></li>
-       <li><a href="search.html"><img src="./images/magnifying_glass.png" alt="Icon" width="50px"/></a></li>
+       <li><a href="search.html"><img src="./images/magnifying_glass.png" alt="Icon" width="42px"/></a></li>
 </ul>
 
 <div id="bodycontainer">
-<p>
-words words words
-</p>
-<p>
-words words words
-</p>
-<p>
-words words words
-</p>
-<p>
-words words words
-</p>
-</div> <!--Closing body container-->
+<h1>
+Method M Films Filmmakers
+</h1>
 
-<ul id="footer">
-      <li style="float:left"><a href="mailto:journalism@missouri.edu" title="Contact">Contact</a></li>
-      <li><a href="https://vimeo.com/home" target="_blank"><img src="./images/vimeo_icon.png" alt="Vimeo" width="35px"/></a></li>
-      <li><a href="https://www.facebook.com/"target="_blank"><img src="./images/facebook_icon.png" alt="Facebook" width="35px"/></a></li>
-      <li><a href="https://twitter.com/" target="_blank"><img src="./images/twitter_icon.png" alt="Twitter" width="35px"/></a></li>
-      <li><a href="https://www.instagram.com/" target="_blank"><img src="./images/instagram_icon.png" alt="Instagram" width="35px"/></a></li>
-</ul>
-</div> <!--Closing entire container-->
-</body>
-</html>
+<p id = "about">
+Method M Films is powered by up and coming filmmakers from the University of Missouri- Columbia. Our filmmakers are part of the <a style= "color:black" href= "https://docjournalism.com/jonathan-b-murray-center/" title="Johnathan B. Murray Center for Documentary Journalism"> Johnathan B. Murry Center for Documentary Journalism site</a>.
+</p>
+<h2 >
+Faculty
+</h2>
+<div class="all">
+      <h3 style="text-align: center">
+      Stacey Woelfel
+      </h3>
+
+<div class="bio">
+    <p style= "text-align: center">
+      <img src= "./images/stacey.jpg" alt= "Stacey Woelfel" width="150px" />
+
+       <a href="mailto: woelfels@missouri.edu">
+         woelfels@missouri.edu
+       </a>
+    </p>
+      <p style= "padding: 10px">
+        Director of the Jonathan B. Murray Center for Documentary Journalism at the school. He serves on the screening committee of the True/False Film Fest, is a jury member for the St. Louis International Film Festival and serves as a jury member and a member of the board of the Kansas City Film Festival.
+      </p>
+</div>
+
+    <h3 style="text-align: center">
+      Robert Greene
+      </h3>
+
+
+<div class="bio2">
+      <p style= "text-align: center">
+          <img src= "./images/robert.jpg" alt= "Robert Greene" width="150px" />
+        <a href="mailto: greenera@missouri.edu"> greenera@missouri.edu
+        </a>
+    </p>
+        <p style= "padding: 10px">
+          Filmmaker-in-chief for the Jonathan B. Murray Center for Documentary Journalism. He was named one of the 10 Filmmakers to Watch in 2014 by The Independent. Robert’s most recent film is the critically-acclaimed Kate plays Christine.
+        </p>
+</div>
+</div>
+        <!--COPY FROM HERE DOWN TO GET TEMPLATE FOOTER-->
+        </div> <!--Closing body container-->
+  <ul id="footer">
+              <li style="float:left"><a href="mailto:woelfels@missouri.edu" title="Contact">Contact</a></li>
+              <li><a href="https://vimeo.com/home" target="_blank"><img src="./images/vimeo_icon.png" alt="Vimeo" width="35px"/></a></li>
+              <li><a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook_icon.png" alt="Facebook" width="35px"/></a></li>
+              <li><a href="https://twitter.com/" target="_blank"><img src="./images/twitter_icon.png" alt="Twitter" width="35px"/></a></li>
+        </ul>
+        </div> <!--Closing entire container-->
+        </body>
+        </html>
