--- a/filmmakers.html
+++ b/filmmakers.html
@@ -36,9 +36,7 @@ Method M Films Filmmakers
 <p id = "about">
 Method M Films is powered by up and coming filmmakers from the University of Missouri- Columbia. Our filmmakers are part of the <a style= "color:black" href= "https://docjournalism.com/jonathan-b-murray-center/" title="Johnathan B. Murray Center for Documentary Journalism"> Johnathan B. Murry Center for Documentary Journalism site</a>.
 </p>
-<h2 >
-Faculty
-</h2>
+
 <div class="all">
       <h3 style="text-align: center">
       Stacey Woelfel
@@ -48,25 +46,34 @@ Faculty
     <p style= "text-align: center">
       <img src= "./images/stacey.jpg" alt= "Stacey Woelfel" width="150px" />
 
-       <a href="mailto: woelfels@missouri.edu">
-         woelfels@missouri.edu
-       </a>
     </p>
       <p style= "padding: 10px">
         Director of the Jonathan B. Murray Center for Documentary Journalism at the school. He serves on the screening committee of the True/False Film Fest, is a jury member for the St. Louis International Film Festival and serves as a jury member and a member of the board of the Kansas City Film Festival.
       </p>
 </div>
 
+<h3 style="text-align: center">
+Stacey Woelfel
+</h3>
+
+<div class="bio">
+<p style= "text-align: center">
+<img src= "./images/stacey.jpg" alt= "Stacey Woelfel" width="150px" />
+
+</p>
+<p style= "padding: 10px">
+  Director of the Jonathan B. Murray Center for Documentary Journalism at the school. He serves on the screening committee of the True/False Film Fest, is a jury member for the St. Louis International Film Festival and serves as a jury member and a member of the board of the Kansas City Film Festival.
+</p>
+</div>
+
+
     <h3 style="text-align: center">
       Robert Greene
       </h3>
-
-
 <div class="bio2">
       <p style= "text-align: center">
           <img src= "./images/robert.jpg" alt= "Robert Greene" width="150px" />
-        <a href="mailto: greenera@missouri.edu"> greenera@missouri.edu
-        </a>
+
     </p>
         <p style= "padding: 10px">
           Filmmaker-in-chief for the Jonathan B. Murray Center for Documentary Journalism. He was named one of the 10 Filmmakers to Watch in 2014 by The Independent. Robert’s most recent film is the critically-acclaimed Kate plays Christine.
