--- a/filmmakers.html
+++ b/filmmakers.html
@@ -39,44 +39,44 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
 
 <div class="all">
       <h3 style="text-align: center">
-      Stacey Woelfel
+      Varun Bajaj
       </h3>
 
 <div class="bio">
     <p style= "text-align: center">
-      <img src= "./images/stacey.jpg" alt= "Stacey Woelfel" width="150px" />
+      <img src= "./images/stacey.jpg" alt= "Varun Bajaj" width="150px" />
 
     </p>
       <p style= "padding: 10px">
-        Director of the Jonathan B. Murray Center for Documentary Journalism at the school. He serves on the screening committee of the True/False Film Fest, is a jury member for the St. Louis International Film Festival and serves as a jury member and a member of the board of the Kansas City Film Festival.
+        Co-director of Concerned Student 1950
       </p>
 </div>
 
 <h3 style="text-align: center">
-Stacey Woelfel
+Adam Dietrich
 </h3>
 
 <div class="bio">
 <p style= "text-align: center">
-<img src= "./images/stacey.jpg" alt= "Stacey Woelfel" width="150px" />
+<img src= "./images/stacey.jpg" alt= "Adam Dietrich" width="150px" />
 
 </p>
 <p style= "padding: 10px">
-  Director of the Jonathan B. Murray Center for Documentary Journalism at the school. He serves on the screening committee of the True/False Film Fest, is a jury member for the St. Louis International Film Festival and serves as a jury member and a member of the board of the Kansas City Film Festival.
+  Co-director of Concerned Student 1950
 </p>
 </div>
 
 
     <h3 style="text-align: center">
-      Robert Greene
+      Kellan Marvin
       </h3>
 <div class="bio2">
       <p style= "text-align: center">
-          <img src= "./images/robert.jpg" alt= "Robert Greene" width="150px" />
+          <img src= "./images/robert.jpg" alt= "Kellan Marvin" width="150px" />
 
     </p>
         <p style= "padding: 10px">
-          Filmmaker-in-chief for the Jonathan B. Murray Center for Documentary Journalism. He was named one of the 10 Filmmakers to Watch in 2014 by The Independent. Robert’s most recent film is the critically-acclaimed Kate plays Christine.
+          Co-director of Concerned Student 1950
         </p>
 </div>
 </div>
