--- a/filmmakers.html
+++ b/filmmakers.html
@@ -48,7 +48,7 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
 
     </p>
       <p style= "padding: 10px">
-        Co-director of Concerned Student 1950
+        <a href="concerned_student_1950" title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
       </p>
 </div>
 
@@ -62,7 +62,7 @@ Adam Dietrich
 
 </p>
 <p style= "padding: 10px">
-  Co-director of Concerned Student 1950
+  <a href="concerned_student_1950" title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
 </p>
 </div>
 
@@ -76,7 +76,7 @@ Adam Dietrich
 
     </p>
         <p style= "padding: 10px">
-          Co-director of Concerned Student 1950
+          <a href="concerned_student_1950" title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
         </p>
 </div>
 </div>
