added imiges to the page

--- a/filmmakers.html
+++ b/filmmakers.html
@@ -44,7 +44,7 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
 
 <div class="bio">
     <p style= "text-align: center">
-      <img src= "./images/stacey.jpg" alt= "Varun Bajaj" width="150px" />
+      <img src= "./images/Bajaj.png" alt= "Varun Bajaj" width="150px" />
 
     </p>
       <p style= "padding: 10px">
@@ -58,7 +58,7 @@ Adam Dietrich
 
 <div class="bio">
 <p style= "text-align: center">
-<img src= "./images/stacey.jpg" alt= "Adam Dietrich" width="150px" />
+<img src= "./images/Dietrich.png" alt= "Adam Dietrich" width="150px" />
 
 </p>
 <p style= "padding: 10px">
@@ -72,7 +72,7 @@ Adam Dietrich
       </h3>
 <div class="bio2">
       <p style= "text-align: center">
-          <img src= "./images/robert.jpg" alt= "Kellan Marvin" width="150px" />
+          <img src= "./images/marvin.png" alt= "Kellan Marvin" width="150px" />
 
     </p>
         <p style= "padding: 10px">
