--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@
   <div class="slideshow-container">
     <div class="mySlides fade">
       <div class="numbertext">1 / 4</div>
-      <img src="dummy_still1.jpg" style="width:100%">
+      <img src="images/dummy_still1.jpg" style="width:100%">
       <div class="text">Silence of the Lambs</div>
     </div>
 
     <div class="mySlides fade">
       <div class="numbertext">2 / 4</div>
-      <img src="dummy_still2.jpg" style="width:100%">
+      <img src="images/dummy_still2.jpg" style="width:100%">
       <div class="text">The Dark Knight</div>
     </div>
 
     <div class="mySlides fade">
       <div class="numbertext">3 / 4</div>
-      <img src="dummy_still3.jpg" style="width:100%">
+      <img src="images/dummy_still3.jpg" style="width:100%">
       <div class="text">Fight Club</div>
     </div>
 
     <div class="mySlides fade">
       <div class="numbertext">4 / 4</div>
-      <img src="dummy_still4.jpg" style="width:100%">
+      <img src="images/dummy_still4.jpg" style="width:100%">
       <div class="text">Jaws</div>
     </div>
 
