--- a/filmmakers.html
+++ b/filmmakers.html
@@ -39,7 +39,7 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
 
 <div class="all">
       <h3 style="text-align: center">
-      Varun Bajaj
+      <a href="John_Doe_Director" title="Varun Bajaj"> Varun Bajaj </a>
       </h3>
 
 <div class="bio">
