--- a/John_Doe_Director.html
+++ b/John_Doe_Director.html
@@ -4,7 +4,7 @@
 
 <!-- 10/13 Copy for new Favicon and title text -->
 <head>
-    <title>Method M Films</title>
+    <title>Method M Films Filmmaker</title>
     <meta http-equiv="content-type"
 		content="text/html;charset=utf-8"/>
     <link rel="stylesheet" type="text/css" href="style.css"/>
@@ -29,26 +29,33 @@
 </ul>
 
 <div id="bodycontainer">
-<p>
-words words words
-</p>
-<p>
-words words words
-</p>
-<p>
-words words words
-</p>
-<p>
-words words words
-</p>
-</div> <!--Closing body container-->
+<h1>
+Method M Films Filmmaker
+</h1>
 
-<ul id="footer">
-      <li style="float:left"><a href="mailto:journalism@missouri.edu" title="Contact">Contact</a></li>
-      <li><a href="https://vimeo.com/home" target="_blank"><img src="./images/vimeo_icon.png" alt="Vimeo" width="35px"/></a></li>
-      <li><a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook_icon.png" alt="Facebook" width="35px"/></a></li>
-      <li><a href="https://twitter.com/" target="_blank"><img src="./images/twitter_icon.png" alt="Twitter" width="35px"/></a></li>
-</ul>
-</div> <!--Closing entire container-->
-</body>
-</html>
+<h3 style="text-align: center">
+ Varun Bajaj
+</h3>
+
+<p style= "text-align: center">
+  <img src= "./images/Bajaj.png" alt= "Varun Bajaj" width="150px" />
+</p>
+
+ <div class= "bio"
+<p id = "about">
+        <a href="concerned_student_1950" title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a> Bajaj is a person who makes films and stuff. He has brown hair and eyes and a face.
+</p>
+
+</div>
+</div>
+        <!--COPY FROM HERE DOWN TO GET TEMPLATE FOOTER-->
+        </div> <!--Closing body container-->
+  <ul id="footer">
+              <li style="float:left"><a href="mailto:woelfels@missouri.edu" title="Contact">Contact</a></li>
+              <li><a href="https://vimeo.com/home" target="_blank"><img src="./images/vimeo_icon.png" alt="Vimeo" width="35px"/></a></li>
+              <li><a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook_icon.png" alt="Facebook" width="35px"/></a></li>
+              <li><a href="https://twitter.com/" target="_blank"><img src="./images/twitter_icon.png" alt="Twitter" width="35px"/></a></li>
+        </ul>
+        </div> <!--Closing entire container-->
+        </body>
+        </html>
