--- a/John_Doe_Director.html
+++ b/John_Doe_Director.html
@@ -37,11 +37,13 @@ Method M Films Filmmaker
  Varun Bajaj
 </h3>
 
-<p style= "text-align: center">
-  <img src= "./images/Bajaj.png" alt= "Varun Bajaj" width="150px" />
+ <div class= "bio">
+
+<p>
+  <img src= "./images/Bajaj.png" alt= "Varun Bajaj" width="150px" height="300" />
 </p>
 
- <div class= "bio"
+ <div class= "all"
 <p id = "about">
         <a href="concerned_student_1950" title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a> Bajaj is a person who makes films and stuff. He has brown hair and eyes and a face.
 </p>
