--- a/press.html
+++ b/press.html
@@ -38,7 +38,7 @@
  </tr>
  <tr>
    <td></td>
-   <td>Concerned Student 1950<a href="./press_kits/Press_kit_example.pdf"></a></td>
+   <td><a href="./press_kits/Press_kit_example.pdf">Concerned Student 1950</a></td>
    <td>2016</td>
    <td>English</td>
    <td>######</td>
