--- a/films.html
+++ b/films.html
@@ -38,7 +38,7 @@
     </div>
   </div>
 
-<h1>A to Z</h1>
+<h1>Current</h1>
 
 <ul id="navposters">
   <li><a href="Concerned_Student_1950.html"><img src="./images/posters/dark-knight.jpg" alt="Dark Knight" width="100%"/></a></li>
