--- a/search.html
+++ b/search.html
@@ -34,7 +34,7 @@
 
 
 <p>
-<img src="images/searchpage.jpg" alt="Search Page"/>
+<img src="images/searchpage.jpg" alt="Search Page" width=100%/>
 </p>
 
 
