--- a/press.html
+++ b/press.html
@@ -24,6 +24,7 @@
 
 <h1>Press</h1>
 
+<div style="overflow-x:auto;">
 <table style="width:100%">
  <tr>
    <th>Name</th>
@@ -33,7 +34,6 @@
    <th>Genre</th>
  </tr>
  <tr>
-   <td></td>
    <td><a href="./press_kits/Press_kit_example.pdf">Concerned Student 1950</a></td>
    <td>2016</td>
    <td>#######</td>
@@ -41,9 +41,8 @@
    <td>######</td>
 
  </tr>
-
 </table>
-
+</div><!--Closing table container-->
 </div> <!--Closing body container-->
 
 <ul id="footer">
