--- a/filmmakers.html
+++ b/filmmakers.html
@@ -3,13 +3,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <!-- 10/13 Copy for new Favicon and title text -->
+
 <head>
-    <title>Filmakers Method M Films</title>
+    <title>Method M Films</title>
     <meta http-equiv="content-type"
 		content="text/html;charset=utf-8"/>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300|Raleway" rel="stylesheet"/>
-
+      <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+      <script src="method_m.js" type="text/javascript"></script>
     <link rel="icon"
       type="image/png"
       href="images/favicon.png"/>
@@ -18,17 +20,18 @@
 
 <body>
   <div id="container">
-<ul id="nav1" class="navigation">
-      <li id="nav2" class="first"><a href="index.html"><img src="./images/_method_mobile.png" alt="Logo" width="42px"/></a></li>
+<ul id="nav1" class="navigation" href="#">
+      <li id="nav2" class="first"><a href="index.html"><img src="./images/_method_mobile.png" alt="Logo" width="43px"/></a></li>
        <li><a href="index.html" title="Home">Home</a></li>
        <li><a href="films.html" title="Films">Films</a></li>
        <li><a href="filmmakers.html" title="Filmmakers">Filmmakers</a></li>
        <li><a href="about.html" title="About">About</a></li>
        <li><a href="press.html" title="Press">Press</a></li>
-       <li><a href="search.html"><img src="./images/magnifying_glass.png" alt="Icon" width="42px"/></a></li>
+       <li><a href="search.html"><img src="./images/magnifying_glass.png" alt="Icon" width="43px"/></a></li>
 </ul>
-
 <div id="bodycontainer">
+  <!--COPY FROM HERE UP TO GET TEMPLATE NAV-->
+
 <h1>
 Method M Films Filmmakers
 </h1>
