--- a/films_a_to_z.html
+++ b/films_a_to_z.html
@@ -10,7 +10,8 @@
 		content="text/html;charset=utf-8"/>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300|Raleway" rel="stylesheet"/>
-
+      <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+      <script src="method_m.js" type="text/javascript"></script>
     <link rel="icon"
       type="image/png"
       href="images/favicon.png"/>
@@ -19,7 +20,7 @@
 
 <body>
   <div id="container">
-<ul id="nav1" class="navigation">
+<ul id="nav1" class="navigation" href="#">
       <li id="nav2" class="first"><a href="index.html"><img src="./images/_method_mobile.png" alt="Logo" width="43px"/></a></li>
        <li><a href="index.html" title="Home">Home</a></li>
        <li><a href="films.html" title="Films">Films</a></li>
@@ -29,6 +30,8 @@
        <li><a href="search.html"><img src="./images/magnifying_glass.png" alt="Icon" width="43px"/></a></li>
 </ul>
 <div id="bodycontainer">
+  <!--COPY FROM HERE UP TO GET TEMPLATE NAV-->
+
   <div class="dropdown">
     <button class="dropbtn">Filter By</button>
     <div class="dropdown-content">
