content to the table added

--- a/press.html
+++ b/press.html
@@ -36,9 +36,9 @@
  <tr>
    <td><a href="./press_kits/Press_kit_example.pdf">Concerned Student 1950</a></td>
    <td>2016</td>
-   <td>#######</td>
+   <td>Adam Dietrich, Varun Bajaj</td>
    <td>English</td>
-   <td>######</td>
+   <td>Short Film / Documentary</td>
 
  </tr>
 </table>
