--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -8,21 +8,26 @@
 		content="text/html;charset=utf-8"/>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300|Raleway" rel="stylesheet"/>
-</head>
 
-<body>
-  <div id="container">
-<ul id="nav1">
-      <li id="nav2"><a href="index.html"><img src="./images/method_m_gold.png" alt="Logo" width="500px"/></a></li>
+    <link rel="icon"
+      type="image/png"
+      href="images/favicon.png"/>
+    </head>
+    <!-- End 10/13 copy -->
+
+    <body>
+    <div id="container">
+    <ul id="nav1" class="navigation">
+      <li id="nav2" class="first"><a href="index.html"><img src="./images/_method_mobile.png" alt="Logo" width="43px"/></a></li>
        <li><a href="index.html" title="Home">Home</a></li>
        <li><a href="films.html" title="Films">Films</a></li>
        <li><a href="filmmakers.html" title="Filmmakers">Filmmakers</a></li>
        <li><a href="about.html" title="About">About</a></li>
        <li><a href="press.html" title="Press">Press</a></li>
-       <li><a href="search.html"><img src="./images/magnifying_glass.png" alt="Icon" width="50px"/></a></li>
-</ul>
+       <li><a href="search.html"><img src="./images/magnifying_glass.png" alt="Icon" width="43px"/></a></li>
+    </ul>
+    <div id="bodycontainer">
 
-<div id="bodycontainer">
 <h1>Concerned Student 1950</h1>
 <div class="videoWrapper">
     <iframe width="1280" height="720" src="https://player.vimeo.com/video/159844403" frameborder="0"></iframe>
@@ -133,11 +138,10 @@ function showSlides(n) {
 </div> <!--Closing body container-->
 
 <ul id="footer">
-      <li style="float:left"><a href="mailto:journalism@missouri.edu" title="Contact">Contact</a></li>
+      <li style="float:left"><a href="mailto:woelfels@missouri.edu" title="Contact">Contact</a></li>
       <li><a href="https://vimeo.com/home" target="_blank"><img src="./images/vimeo_icon.png" alt="Vimeo" width="35px"/></a></li>
       <li><a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook_icon.png" alt="Facebook" width="35px"/></a></li>
       <li><a href="https://twitter.com/" target="_blank"><img src="./images/twitter_icon.png" alt="Twitter" width="35px"/></a></li>
-      <li><a href="https://www.instagram.com/" target="_blank"><img src="./images/instagram_icon.png" alt="Instagram" width="35px"/></a></li>
 </ul>
 </div> <!--Closing entire container-->
 </body>
