--- a/press.html
+++ b/press.html
@@ -1,12 +1,22 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<!-- 10/13 Copy for new Favicon and title text -->
 
 <head>
-    <title>Method M Films: Press Page</title>
+    <title>Method M Films</title>
     <meta http-equiv="content-type"
 		content="text/html;charset=utf-8"/>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300|Raleway" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300|Raleway" rel="stylesheet"/>
+      <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+      <script src="method_m.js" type="text/javascript"></script>
+    <link rel="icon"
+      type="image/png"
+      href="images/favicon.png"/>
 </head>
+<!-- End 10/13 copy -->
 
 <body>
 <div id="container">
@@ -32,19 +42,23 @@
    <th>Director</th>
    <th>Language</th>
    <th>Genre</th>
+   <th>Press Kit</td>
  </tr>
  <tr>
-   <td><a href="./press_kits/Press_kit_example.pdf">Concerned Student 1950</a></td>
+   <td><a href="Concerned_Student_1950.html">Concerned Student 1950</a></td>
    <td>2016</td>
    <td>Adam Dietrich, Varun Bajaj</td>
    <td>English</td>
    <td>Short Film / Documentary</td>
+   <td><a href="./press_kits/Press_kit_example.pdf">PDF</td>
 
  </tr>
 </table>
 </div><!--Closing table container-->
-</div> <!--Closing body container-->
 
+
+</div>
+</div> <!--Closing body container-->
 <ul id="footer">
       <li style="float:left"><a href="mailto:woelfels@missouri.edu" title="Contact">Contact</a></li>
       <li><a href="https://vimeo.com/home" target="_blank"><img src="./images/vimeo_icon.png" alt="Vimeo" width="35px"/></a></li>
