--- a/John_Doe_Director.html
+++ b/John_Doe_Director.html
@@ -37,10 +37,9 @@ Method M Films Filmmaker
  Varun Bajaj
 </h3>
 
- <div class= "bio">
 
 <p>
-  <img src= "./images/Bajaj.png" alt= "Varun Bajaj" width="150px" height="300" />
+  <img src= "./images/johndoe.JPG" alt= "Varun Bajaj" width="1000px" height="566px" />
 </p>
 
  <div class= "all"
@@ -48,7 +47,6 @@ Method M Films Filmmaker
         <a href="concerned_student_1950" title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a> Bajaj is a person who makes films and stuff. He has brown hair and eyes and a face.
 </p>
 
-</div>
 </div>
         <!--COPY FROM HERE DOWN TO GET TEMPLATE FOOTER-->
         </div> <!--Closing body container-->
