--- a/Template.html
+++ b/Template.html
@@ -20,7 +20,9 @@
 
 <body>
   <div id="container">
-<ul id="nav1" class="navigation" href="#">
+    <nav>
+      <a class="site" href"#">&#9776;</a>
+<ul id="nav1" class="navigation">
       <li id="nav2" class="first"><a href="index.html"><img src="./images/_method_mobile.png" alt="Logo" width="43px"/></a></li>
        <li><a href="index.html" title="Home">Home</a></li>
        <li><a href="films.html" title="Films">Films</a></li>
@@ -29,6 +31,7 @@
        <li><a href="press.html" title="Press">Press</a></li>
        <li><a href="search.html"><img src="./images/magnifying_glass.png" alt="Icon" width="43px"/></a></li>
 </ul>
+</nav>
 <div id="bodycontainer">
   <!--COPY FROM HERE UP TO GET TEMPLATE NAV-->
 
