--- a/press.html
+++ b/press.html
@@ -45,12 +45,12 @@
    <th>Press Kit</td>
  </tr>
  <tr>
-   <td><a href="Concerned_Student_1950.html">Concerned Student 1950</a></td>
-   <td>2016</td>
-   <td>Adam Dietrich, Varun Bajaj</td>
-   <td>English</td>
-   <td>Short Film / Documentary</td>
-   <td><a href="./press_kits/Press_kit_example.pdf">PDF</td>
+   <td datalabel="Concerned Student 1950"><a href="Concerned_Student_1950.html">Concerned Student 1950</a></td>
+   <td datalabel="2016">2016</td>
+   <td datalabel="Adam Dietrich, Varun Bajaj">Adam Dietrich, Varun Bajaj</td>
+   <td datalabel="English">English</td>
+   <td datalabel="Short Film / Documentary">Short Film / Documentary</td>
+   <td datalabel="PDF"><a href="./press_kits/Press_kit_example.pdf">PDF</td>
 
  </tr>
 </table>
