fixed links on filmmakers page

--- a/filmmakers.html
+++ b/filmmakers.html
@@ -42,7 +42,7 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
 
 <div class="all">
       <h3 style="text-align: center">
-      <a href="John_Doe_Director" title="Varun Bajaj"> Varun Bajaj </a>
+      <a href="John_Doe_Director.html" title="Varun Bajaj"> Varun Bajaj </a>
       </h3>
 
 <div class="bio">
@@ -51,7 +51,7 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
 
     </p>
       <p style= "padding: 10px">
-        <a href="concerned_student_1950" title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
+        <a href="concerned_student_1950.html" title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
       </p>
 </div>
 
@@ -65,7 +65,7 @@ Adam Dietrich
 
 </p>
 <p style= "padding: 10px">
-  <a href="concerned_student_1950" title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
+  <a href="concerned_student_1950.html" title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
 </p>
 </div>
 
@@ -79,7 +79,7 @@ Adam Dietrich
 
     </p>
         <p style= "padding: 10px">
-          <a href="concerned_student_1950" title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
+          <a href="concerned_student_1950.html" title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
         </p>
 </div>
 </div>
