--- a/John_Doe_Director.html
+++ b/John_Doe_Director.html
@@ -37,16 +37,16 @@ Method M Films Filmmaker
  Varun Bajaj
 </h3>
 
-
+<div id="doe" style= "text-align: center">
 <p>
   <img src= "./images/johndoe.JPG" alt= "Varun Bajaj" width="1000px" height="566px" />
 </p>
 
  <div class= "all"
-<p id = "about">
-        <a href="concerned_student_1950" title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a> Bajaj is a person who makes films and stuff. He has brown hair and eyes and a face.
+<p id = "about" style= "text-align: center">
+        <a href="concerned_student_1950.html" title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a> Bajaj is a person who makes films and stuff. He has brown hair and eyes and a face.
 </p>
-
+</div>
 </div>
         <!--COPY FROM HERE DOWN TO GET TEMPLATE FOOTER-->
         </div> <!--Closing body container-->
