--- a/Template.html
+++ b/Template.html
@@ -8,6 +8,7 @@
     <title>Method M Films</title>
     <meta http-equiv="content-type"
 		content="text/html;charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300|Raleway" rel="stylesheet"/>
       <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
