--- a/Template.html
+++ b/Template.html
@@ -25,7 +25,7 @@
       <a class="site" href"#">&#9776;</a>
 <ul id="nav1" class="navigation">
       <li class="logo-small" id="nav2" class="first"><a href="index.html"><img src="./images/_method_mobile.png" alt="Logo" width="43px"/></a></li>
-      <li class="logo-large" id="nav2" class="first"><a href="index.html"><img src="./images/method_m_gold.png" alt="Logo" width="100%"/></a></li>
+      <li class="logo-large" id="nav2" class="first"><a href="index.html"><img class="logo-large" src="./images/method_m_gold.png" alt="Logo" width="100%"/></a></li>
        <li><a href="index.html" title="Home">Home</a></li>
        <li><a href="films.html" title="Films">Films</a></li>
        <li><a href="filmmakers.html" title="Filmmakers">Filmmakers</a></li>
