--- a/Template.html
+++ b/Template.html
@@ -22,9 +22,9 @@
 <body>
   <div id="container">
     <nav>
+      <a id="nav2" class="first" href="index.html"><img src="./images/_method_mobile.png" alt="Logo" width="43px"
+      <ul id="nav1" class="navigation"/></a>
       <a class="site" href"#">&#9776;</a>
-<ul id="nav1" class="navigation">
-      <li id="nav2" class="first"><a href="index.html"><img src="./images/_method_mobile.png" alt="Logo" width="43px"/></a></li>
        <li><a href="index.html" title="Home">Home</a></li>
        <li><a href="films.html" title="Films">Films</a></li>
        <li><a href="filmmakers.html" title="Filmmakers">Filmmakers</a></li>
