--- a/Template.html
+++ b/Template.html
@@ -2,13 +2,10 @@
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
-<!-- 10/13 Copy for new Favicon and title text -->
-
 <head>
     <title>Method M Films</title>
     <meta http-equiv="content-type"
 		content="text/html;charset=utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300|Raleway" rel="stylesheet"/>
       <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
@@ -17,19 +14,14 @@
       type="image/png"
       href="images/favicon.png"/>
 </head>
-<!-- End 10/13 copy -->
 
 <body>
   <div id="container">
     <nav>
-      <a id="nav2" class="first" href="index.html"><img src="./images/_method_mobile.png" alt="Logo" width="43px"
-      <ul id="nav1" class="navigation"/></a>
       <a class="site" href"#">&#9776;</a>
-
 <ul id="nav1" class="navigation">
-      <a class="logo-small" id="nav2" class="first"><a href="index.html"><img src="./images/_method_mobile.png" alt="Logo" width="43px"/></a>
-      <a class="logo-large" id="nav2" class="first"><a href="index.html"><img class="logo-large" src="./images/method_m_gold.png" alt="Logo" width="100%"/></a>
-
+      <li class="logo-small" id="nav2" class="first"><a href="index.html"><img src="./images/_method_mobile.png" alt="Logo" width="43px"/></a></li>
+       <li class="logo-large" id="nav2" class="first"><a class="logo-large" href="index.html"><img src="./images/method_m_gold.png" alt="Logo" width="100%"/></a></li>
        <li><a href="index.html" title="Home">Home</a></li>
        <li><a href="films.html" title="Films">Films</a></li>
        <li><a href="filmmakers.html" title="Filmmakers">Filmmakers</a></li>
