--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -8,11 +8,12 @@
 		content="text/html;charset=utf-8"/>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300|Raleway" rel="stylesheet"/>
-
+      <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+      <script src="method_m.js" type="text/javascript"></script>
     <link rel="icon"
       type="image/png"
       href="images/favicon.png"/>
-    </head>
+</head>
     <!-- End 10/13 copy -->
 
     <body>
