mini menu on concerned student
links on page are now black, back to top active, menu underlines when
hover etc

--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -14,41 +14,52 @@
       type="image/png"
       href="images/favicon.png"/>
 </head>
-    <!-- End 10/13 copy -->
 
-    <body>
-    <div id="container">
-    <ul id="nav1" class="navigation">
-      <li id="nav2" class="first"><a href="index.html"><img src="./images/_method_mobile.png" alt="Logo" width="43px"/></a></li>
+<body>
+  <div id="container">
+    <nav>
+       <a class="logo-large" id="nav2" class="first"><a class="logo-large" href="index.html"><img src="./images/method_m_gold.png" alt="Logo" width="100%"/></a>
+      <a class="site" href"#">&#9776; MENU</a>
+<ul id="nav1" class="navigation">
+      <li class="logo-small" id="nav2" class="first"><a href="index.html"><img src="./images/_method_mobile.png" alt="Logo" width="44px"/></a></li>
        <li><a href="index.html" title="Home">Home</a></li>
        <li><a href="films.html" title="Films">Films</a></li>
        <li><a href="filmmakers.html" title="Filmmakers">Filmmakers</a></li>
        <li><a href="about.html" title="About">About</a></li>
        <li><a href="press.html" title="Press">Press</a></li>
-       <li><a href="search.html"><img src="./images/magnifying_glass.png" alt="Icon" width="43px"/></a></li>
-    </ul>
-    <div id="bodycontainer">
+       <li><a href="search.html"><img src="./images/magnifying_glass.png" alt="Icon" width="44px"/></a></li>
+</ul>
+</nav>
+<div id="bodycontainer">
+
+
 
 <h1>Concerned Student 1950</h1>
 <div class="videoWrapper">
     <iframe width="1280" height="720" src="https://player.vimeo.com/video/159844403" frameborder="0"></iframe>
   </div>
 
-<ul id="movie_menu">
-<li><a name="top"></a></li>
-<li><a href="#summary">Summary</a></li>
-<li><a href="#credits">Credits</a></li>
-<li><a href="#photos">Photos</a></li>
-<li><a href="#press">Press</a></li>
+
+<ul id="jump" role="heading">
+  <a name="top"></a></li>
+	<li><a href="#summary" accesskey="1" title="AccessKey[1]: Jump to main content">Summary</a></li>
+	<li><a href="#credits" accesskey="2" title="AccessKey[2]: Jump to sidebar menu">Credits</a></li>
+	<li><a href="#photos" accesskey="3" title="AccessKey[3]: Jump to footer items">Photos</a></li>
+	<li><a href="#press" accesskey="4" title="AccessKey[4]: Jump to comments">Press</a></li>
 </ul>
+
+<div><a name="summary"></a></div>
+<div><a name="credits"></a></div>
+<div><a name="photos"></a></div>
+<div><a name="press"></a></div>
 
 <p></p>
 
-<a name="summary"></a> <h2>Summary</h2>
+<a name="#summary"></a> <h2>Summary</h2>
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
 <p style= "text-align: center">A series of racist acts prompts three Mizzou students to pick up cameras and take us inside the student movement that brought down their college president. From the hunger strike, to victory, to the fear of violent reprisals, we live with the students who started a campus revolt.</p>
 
-<a name="credits"></a> <h2>Credits</h2>
+<a name="#credits"></a> <h2>Credits</h2>
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
 <p style= "text-align: center">
   <img src= "./images/filmmakers_photo.jpg" width="600px" alt= "Concerned Student filmmakers"/></p>
@@ -63,7 +74,7 @@
 <h3>Produced by</h3>
   <p style= "text-align: center">Robert Greene, Stacey Woelfel and the Jonathan B. Murray Center for Documentary Journalism</p>
 
-<a name="photos"></a> <h2>Photos</h2>
+<a name="#photos"></a> <h2>Photos</h2>
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
 <div class="slideshow-container">
   <div class="mySlides fade">
@@ -127,7 +138,7 @@ function showSlides(n) {
 }
 </script>
 
-<a name="press"></a> <h2>Press </h2>
+<a name="#press"></a> <h2>Press </h2>
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
 <h3 style="text-align: center">Vox Magazine</h3>
   <p style= "text-align: center">
