--- a/about.html
+++ b/about.html
@@ -2,32 +2,34 @@
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
-<!-- 10/13 Copy for new Favicon and title text -->
 <head>
-    <title>About Method M Films</title>
+    <title>Method M Films</title>
     <meta http-equiv="content-type"
 		content="text/html;charset=utf-8"/>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300|Raleway" rel="stylesheet"/>
-
+      <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+      <script src="method_m.js" type="text/javascript"></script>
     <link rel="icon"
       type="image/png"
       href="images/favicon.png"/>
 </head>
-<!-- End 10/13 copy -->
 
 <body>
   <div id="container">
+    <nav>
+       <a class="logo-large" id="nav2" class="first"><a class="logo-large" href="index.html"><img src="./images/method_m_gold.png" alt="Logo" width="100%"/></a>
+      <a class="site" href"#">&#9776; MENU</a>
 <ul id="nav1" class="navigation">
-      <li id="nav2" class="first"><a href="index.html"><img src="./images/_method_mobile.png" alt="Logo" width="42px"/></a></li>
+      <li class="logo-small" id="nav2" class="first"><a href="index.html"><img src="./images/_method_mobile.png" alt="Logo" width="44px"/></a></li>
        <li><a href="index.html" title="Home">Home</a></li>
        <li><a href="films.html" title="Films">Films</a></li>
        <li><a href="filmmakers.html" title="Filmmakers">Filmmakers</a></li>
        <li><a href="about.html" title="About">About</a></li>
        <li><a href="press.html" title="Press">Press</a></li>
-       <li><a href="search.html"><img src="./images/magnifying_glass.png" alt="Icon" width="42px"/></a></li>
+       <li><a href="search.html"><img src="./images/magnifying_glass.png" alt="Icon" width="44px"/></a></li>
 </ul>
-
+</nav>
 <div id="bodycontainer">
 <h1>
 About Method M Films
