--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -3,9 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <title>Concerned Student 1950</title>
+    <title>Method M Films</title>
     <meta http-equiv="content-type"
 		content="text/html;charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300|Raleway" rel="stylesheet"/>
       <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
