--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 </nav>
 <div id="bodycontainer">
   <!--COPY FROM HERE UP TO GET TEMPLATE NAV-->
+<p class="crisis"> hello</p>
 
-  <div class="slideshow-container">
+<div class="slideshow-container">
     <div class="mySlides fade">
       <img class="slideimage" src="images/dummy_still1.jpg" style="width:100%">
       <div class="text">Silence of the Lambs</div>
@@ -94,7 +95,7 @@
     slides[slideIndex-1].style.display = "block";
     dots[slideIndex-1].className += " active";
   }
-  </script>
+</script>
 
 <!--Jon's section -->
 
