fixed more html style into CSS

--- a/filmmakers.html
+++ b/filmmakers.html
@@ -39,48 +39,48 @@ Method M Films Filmmakers
 </h1>
 
 <p id = "about">
-Method M Films is powered by up and coming filmmakers from the University of Missouri- Columbia. Our filmmakers are part of the <a style= "color:black" href= "https://docjournalism.com/jonathan-b-murray-center/" title="Johnathan B. Murray Center for Documentary Journalism"> Johnathan B. Murry Center for Documentary Journalism site</a>.
+Method M Films is powered by up and coming filmmakers from the University of Missouri- Columbia. Our filmmakers are part of the <a id="connect" href= "https://docjournalism.com/jonathan-b-murray-center/" title="Johnathan B. Murray Center for Documentary Journalism"> Johnathan B. Murry Center for Documentary Journalism site</a>.
 </p>
 
 <div class="all">
-      <h3 style="text-align: center">
+      <h3 >
       <a href="John_Doe_Director.html" title="Varun Bajaj"> Varun Bajaj </a>
       </h3>
 
 <div class="bio">
-    <p style= "text-align: center">
+    <p >
       <img src= "./images/Bajaj.png" alt= "Varun Bajaj" width="150px" />
 
     </p>
-      <p style= "padding: 10px">
+      <p id= "words">
         <a href="concerned_student_1950.html" title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
       </p>
 </div>
 
-<h3 style="text-align: center">
+<h3 >
 Adam Dietrich
 </h3>
 
 <div class="bio">
-<p style= "text-align: center">
+<p id= "name">
 <img src= "./images/Dietrich.png" alt= "Adam Dietrich" width="150px" />
 
 </p>
-<p style= "padding: 10px">
+<p id= "words">
   <a href="concerned_student_1950.html" title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
 </p>
 </div>
 
 
-    <h3 style="text-align: center">
+    <h3 >
       Kellan Marvin
       </h3>
 <div class="bio2">
-      <p style= "text-align: center">
+      <p >
           <img src= "./images/marvin.png" alt= "Kellan Marvin" width="150px" />
 
     </p>
-        <p style= "padding: 10px">
+        <p id= "words">
           <a href="concerned_student_1950.html" title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
         </p>
 </div>
