--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 About Method M Films
 </h1>
 <p style= "text-align: center">
-<img src= "./images/method_about_page.png" alt=" Method M Films Logo" width="100%"  />
+<img src= "./images/method_about_page.png" alt=" Method M Films Logo" width="600px"  />
 </p>
 
 <p id ="about">
