added search bar

--- a/search.html
+++ b/search.html
@@ -35,10 +35,12 @@
   <!--COPY FROM HERE UP TO GET TEMPLATE NAV-->
 
 
-
-<p>
-<img src="images/searchpage.jpg" alt="Search Page" width=100%/>
-</p>
+  <p>Search</p>
+<div id="search">
+  <form>
+    <input type="text" name="search" placeholder="Search..">
+  </form>
+</div>
 
 
 
