Added CS1950 stuff

--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
   <!--COPY FROM HERE UP TO GET TEMPLATE NAV-->
 <p class="crisis"> hello</p>
 
-<div class="slideshow-container">
+  <div class="slideshow-container">
+    <div class="mySlides fade">
+      <img class="slideimage" src="images/CS_still.jpg" style="width:100%">
+      <div class="text">Concerned Student 1950</div>
+    </div>
+
     <div class="mySlides fade">
       <img class="slideimage" src="images/dummy_still1.jpg" style="width:100%">
       <div class="text">Silence of the Lambs</div>
@@ -143,6 +148,9 @@
 <div align="center">
 
 <div id="carousel">
+    <div class="slide">
+        <img src="images/Concerned_Student_poster.jpg" />
+      </div>
     <div class="slide">
         <img src="images/posters/dark-knight.jpg" />
     </div>
