add mockup of search link

--- a/search.html
+++ b/search.html
@@ -42,6 +42,10 @@
   </form>
 </div>
 
+<div id="searchlink"> <p><a href="Concerned_Student_1950.html">Concerned Student 1950</a>
+  <p>The documentary Concerned Student 1950 follows the events that unfolded at the University of Missouri in the fall of 2015.</p>
+
+</div>
 
 
 
