--- a/films_a_to_z.html
+++ b/films_a_to_z.html
@@ -46,6 +46,7 @@
 <h1>A to Z</h1>
 
 <ul id="navposters">
+  <li><a href="Concerned_Student_1950.html"><img src="./images/Concerned_Student_poster.JPG" alt="Concerned Student 1950" width="100%"/></a></li>
   <li><a href="Concerned_Student_1950.html"><img src="./images/posters/dark-knight.jpg" alt="Dark Knight" width="100%"/></a></li>
   <li><a href="Concerned_Student_1950.html"><img src="./images/posters/fight-club.jpg" alt="Fight Club" width="100%"/></a></li>
   <li><a href="Concerned_Student_1950.html"><img src="./images/posters/force-awakens.jpeg" alt="Force Awakens" width="100%"/></a></li>
