--- a/films_director.html
+++ b/films_director.html
@@ -46,6 +46,7 @@
 <h1>Director</h1>
 
 <ul id="navposters">
+  <li><a href="Concerned_Student_1950.html"><img src="./images/Concerned_Student_poster.JPG" alt="Concerned Student 1950" width="100%"/></a></li>
   <li><a href="Concerned_Student_1950.html"><img src="./images/posters/force-awakens.jpeg" alt="Force Awakens" width="100%"/></a></li>
   <li><a href="Concerned_Student_1950.html"><img src="./images/posters/titanic.jpg" alt="Titanic" width="100%"/></a></li>
   <li><a href="Concerned_Student_1950.html"><img src="./images/posters/silence-of-the-lambs.jpg" alt="Silence of the Lambs" width="100%"/></a></li>
