Increased arrow size

--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
       <a href="Concerned_Student_1950.html"><img src="images/dummy_still4.jpg" style="width:100%">
       <div class="text">Jaws</div>
     </div>
-
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    <a class="prev" onclick="plusSlides(-1)"><h1 class="arrow">&#10094;</h1></a>
+    <a class="next" onclick="plusSlides(1)"><h1 class="arrow">&#10095;</h1></a>
   </div>
   <br>
 
