added filmmakers div

--- a/filmmakers.html
+++ b/filmmakers.html
@@ -32,6 +32,7 @@
 </ul>
 </nav>
 <div id="bodycontainer">
+  <div id="filmmakers">
   <!--COPY FROM HERE UP TO GET TEMPLATE NAV-->
 
 <h1>
@@ -86,6 +87,7 @@ Adam Dietrich
 </div>
 </div>
         <!--COPY FROM HERE DOWN TO GET TEMPLATE FOOTER-->
+</div>
         </div> <!--Closing body container-->
   <ul id="footer">
               <li style="float:left"><a href="mailto:woelfels@missouri.edu" title="Contact">Contact</a></li>
