video icon added

--- a/press.html
+++ b/press.html
@@ -46,7 +46,7 @@
    <th>Press Kit</td>
  </tr>
  <tr>
-   <td datalabel="Concerned Student 1950" class="cs1950"><a href="Concerned_Student_1950.html">Concerned Student 1950</a></td>
+   <td datalabel="Concerned Student 1950" class="cs1950"><a href="Concerned_Student_1950.html">Concerned Student 1950 🎥</a></td>
    <td datalabel="2016">2016</td>
    <td datalabel="Adam Dietrich, Varun Bajaj">Adam Dietrich, Varun Bajaj</td>
    <td datalabel="English">English</td>
