--- a/press.html
+++ b/press.html
@@ -36,7 +36,7 @@
 <h1>Press</h1>
 
 <div style="overflow-x:auto;">
-<table style="width:100%">
+<table style="width:100%" class="TableLinks">
  <tr>
    <th>Name</th>
    <th>Year</th>
