--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 <div id="carousel">
     <div class="slide">
-        <a href="Concerned_Student_1950.html"><img src="images/Concerned_Student_poster.jpg" />
+        <a href="Concerned_Student_1950.html"><img src="images/Concerned_Student_poster.JPG" />
       </div>
     <div class="slide">
         <a href="Concerned_Student_1950.html"><img src="images/posters/dark-knight.jpg" />
