Messing with Firefox compatible nav in template

--- a/Template.html
+++ b/Template.html
@@ -14,6 +14,15 @@
     <link rel="icon"
       type="image/png"
       href="images/favicon.png"/>
+
+      <style type="text/css">
+      @-moz-document url-prefix() {
+          .logo-small {
+              height: 1.4em;
+          }
+      }
+      </style>
+
 </head>
 
 <body>
@@ -22,13 +31,13 @@
        <a class="logo-large" id="nav2" class="first"><a class="logo-large" href="index.html"><img src="./images/method_m_gold.png" alt="Logo" width="100%"/></a>
       <a class="site" href"#">&#9776; MENU</a>
 <ul id="nav1" class="navigation">
-      <li class="logo-small" id="nav2" class="first"><a href="index.html"><img src="./images/small_logo.png" alt="Logo" width="43em"/></a></li>
+      <li class="logo-small" id="nav2" class="first"><a href="index.html"><img src="./images/small_logo.png" alt="Logo" height="43px" class="logo-small"/></a></li>
        <li><a href="index.html" title="Home">Home</a></li>
        <li><a href="films.html" title="Films">Films</a></li>
        <li><a href="filmmakers.html" title="Filmmakers">Filmmakers</a></li>
        <li><a href="about.html" title="About">About</a></li>
        <li><a href="press.html" title="Press">Press</a></li>
-       <li><a href="search.html"><img src="./images/magnifying_glass.png" alt="Icon" width="43em"/></a></li>
+       <li><a href="search.html"><img src="./images/magnifying_glass.png" alt="Icon" height="43px" class="logo-small"/></a></li>
 </ul>
 </nav>
 <div id="bodycontainer">
