--- a/Template.html
+++ b/Template.html
@@ -21,6 +21,13 @@
               height: 1.4em;
           }
       }
+
+      @supports (-ms-accelerator:true) {
+        .logo-small {
+            height: 1.4em;
+        }
+  }
+}
       </style>
 
 </head>
