--- a/Template.html
+++ b/Template.html
@@ -22,7 +22,7 @@
           }
       }
 
-      @supports (-ms-accelerator:true) {
+      @supports (-ms-ime-align:auto) {
         .logo-small {
             height: 5.5em;
         }
