let's try pixels

--- a/Template.html
+++ b/Template.html
@@ -24,7 +24,7 @@
 
       @supports (-ms-ime-align:auto) {
         .logo-small {
-            height: 1.35em;
+            height: 36px;
         }
   }
 }
