centered some stuff and added a blurb

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <span class="dot" onclick="currentSlide(2)"></span>
     <span class="dot" onclick="currentSlide(3)"></span>
     <span class="dot" onclick="currentSlide(4)"></span>
+    <span class="dot" onclick="currentSlide(5)"></span>
   </div>
 
   <script>
@@ -101,6 +102,7 @@
   }
 </script>
 
+<p>Method M Films is a production company affiliated with the University of Missouri documentary journalism program, based out of Columbia, Missouri.</p>
 <!--Jon's section -->
 
 <style>
