Messing with slide show

--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -77,25 +77,25 @@
 
 <a name="#photos"></a> <h2>Photos</h2>
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
-<div class="slideshow-container">
+<div class="photos">
   <div class="mySlides fade">
+    <img src="images/concerned_still1.jpg" style="width:80%">
     <div class="numbertext">1 / 4</div>
-    <img src="images/concerned_still1.jpg" style="width:100%">
   </div>
 
   <div class="mySlides fade">
+    <img src="images/concerned_still2.jpg" style="width:80%">
     <div class="numbertext">2 / 4</div>
-    <img src="images/concerned_still2.jpg" style="width:100%">
   </div>
 
   <div class="mySlides fade">
+    <img src="images/concerned_still3.jpg" style="width:80%">
     <div class="numbertext">3 / 4</div>
-    <img src="images/concerned_still3.jpg" style="width:100%">
   </div>
 
   <div class="mySlides fade">
+    <img src="images/concerned_still4.jpg" style="width:80%">
     <div class="numbertext">4 / 4</div>
-    <img src="images/concerned_still4.jpg" style="width:100%">
   </div>
 
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
