--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -58,11 +58,11 @@
 
 <a name="#summary"></a> <h2>Summary</h2>
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
-<p style= "text-align: center">A series of racist acts prompts three Mizzou students to pick up cameras and take us inside the student movement that brought down their college president. From the hunger strike, to victory, to the fear of violent reprisals, we live with the students who started a campus revolt.</p>
+<p>A series of racist acts prompts three Mizzou students to pick up cameras and take us inside the student movement that brought down their college president. From the hunger strike, to victory, to the fear of violent reprisals, we live with the students who started a campus revolt.</p>
 
 <a name="#credits"></a> <h2>Credits</h2>
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
-<p style= "text-align: center">
+<p>
   <img src= "./images/filmmakers_photo.jpg" width="600px" alt= "Concerned Student filmmakers"/></p>
 <h3>Filmmakers</h3>
   <p style= "text-align: center"> Varun Bajaj, Adam Dietrich and Kellan Hayley Marvin</p>
@@ -98,8 +98,8 @@
     <div class="numbertext">4 / 4</div>
   </div>
 
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  <a class="photo-prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="photo-next" onclick="plusSlides(1)">&#10095;</a>
 </div>
 <br>
 
