left align search page

--- a/search.html
+++ b/search.html
@@ -45,17 +45,16 @@
 <div id="searchlink">
 
   <a href="Concerned_Student_1950.html">Concerned Student 1950</a>
-    <p>The documentary Concerned Student 1950 follows the events that unfolded at the University of Missouri in the fall of 2015.</p>
+    <p class="results">The documentary Concerned Student 1950 follows the events that unfolded at the University of Missouri in the fall of 2015.</p>
 
   <a href="John_Doe_Director.html">Varun Bajaj</a>
-    <p>Varun Bajaj is a documentary student at the University of Missouri. He was a filmmaker on the film Concerned Student 1950.</p>
+    <p class="results">Varun Bajaj is a documentary student at the University of Missouri. He was a filmmaker on the film Concerned Student 1950.</p>
 
   <a href="press.html">Press</a>
-    <p>Press information for Method M Films.</p>
+    <p class="results">Press information for Method M Films.</p>
 
   <a href="index.html">Home Page</a>
-    <p>Click the link to return to the home page.</p>
-
+    <p class="results">Click the link to return to the home page.</p>
 
 </div>
 
